# perbandingandata

./: .gitignore  .replit  README.md  app.py  pyproject.toml  replit.md  requirements.txt
.streamlit/: config.toml
attached_assets/: 1._izin-final-export-2025-01-01-2025-01-31-082027_1770023038660.xlsx  Realisasi_Impor_cek_tw_3_1768894762366.xlsx  ReportLapDetilSurat-3_1768965286239.xlsx  ReportRealisasiImporTW3_1768963781572.xlsx  ReportRealisasiImpor_tw3_1768894770994.xlsx  exim_www.bps.go.id_Jumat,_06_Februari_2026_pukul_16.00.15_eks_1770621609716.xlsx  exim_www.bps.go.id_Jumat,_06_Februari_2026_pukul_16.00.15_eks_1770645879062.xlsx  hasil_perbandingan_1769005434119.xlsx
