[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "openai>=2.17.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "playwright>=1.58.0",
    "streamlit>=1.53.0",
    "tenacity>=9.1.2",
]
